--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ p {
     margin: 8px 0px;
 }
 
+.nav {
+    padding: 10px 0px;
+}
+
 .landing {
     display: flex;
     flex-direction: column;
@@ -62,9 +66,9 @@ p {
 }
 
 .main {
-    background-color: gray;
+    background-color: #1a1a1a;
     color: white;
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
 }
 
