--- a/style.css
+++ b/style.css
@@ -99,8 +99,13 @@ p {
 }
 
 .content {
+    padding: 10px 20px;
+    min-width: 100px;
     display: flex;
     flex-direction: column;
+}
+
+.contentwrap {
     padding: 10px 20px;
     min-width: 100px;
 }
@@ -108,6 +113,27 @@ p {
 .photo {
     max-height: 400px;
     object-fit: contain;
-    float: right;
     margin: 8px 0px;
+    padding: 8px 20px 0px 20px;
+}
+
+.photowrap {
+    max-height: 400px;
+    float: right;
+    object-fit: contain;
+    margin: 8px 0px;
+    padding: 8px 20px 0px 20px;
+}
+
+@media (max-width: 1100px) {
+    .contentwrap {
+        display: inline;
+    }
+}
+
+@media (max-width: 500px) {
+    .contentwrap {
+        display: flex;
+        flex-direction: column;
+    }
 }
